Fix hero section and email

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                                     </div>
                                 </a>
                                 
-                                <a href="mailto:zoe@itsatwinthing.co.uk" class="flex items-center p-4 bg-brown-50 rounded-xl hover:bg-brown-100 transition-colors">
+                                <a href="mailto:zoe@itsatwinthing.co.uk?subject=Booking%20%26%20Inquiry" class="flex items-center p-4 bg-brown-50 rounded-xl hover:bg-brown-100 transition-colors">
                                     <div class="w-20 h-20 bg-brown-200 rounded-full flex items-center justify-center mr-4">
                                         <i class="fas fa-envelope text-brown text-3xl"></i>
                                     </div>
@@ -392,7 +392,7 @@
                     <a href="https://www.instagram.com/its_a_twin_thing_uk/" target="_blank" rel="noopener noreferrer" class="text-white hover:text-pink text-3xl"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.youtube.com/@Its_A_Twin_Thing_UK" target="_blank" rel="noopener noreferrer" class="text-white hover:text-pink text-3xl"><i class="fab fa-youtube"></i></a>
                     <a href="https://www.threads.com/@its_a_twin_thing_uk?xmt=AQF0BG7B1QUDaRhQmDbGCyKAzTh9zWQbwzrdOorgekMkrLk" target="_blank" rel="noopener noreferrer" class="text-white hover:text-pink text-3xl"><i class="fab fa-threads"></i></a>
-                    <a href="mailto:zoe@itsatwinthing.co.uk" class="text-white hover:text-pink text-3xl"><i class="fas fa-envelope"></i></a>
+                    <a href="mailto:zoe@itsatwinthing.co.uk?subject=Booking%20%26%20Inquiry" class="text-white hover:text-pink text-3xl"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
             
