Fix button styles.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <h2 class="text-xl md:text-2xl mb-8">Parenting, Coaching & Content Creation</h2>
                             <p class="text-lg md:text-xl mb-8">Real-life stories, expert support, and content that connects.</p>
                             <div class="flex flex-col md:flex-row justify-center gap-4">
-                                <a href="#services" class="btn-primary bg-pink text-brown px-6 py-3 rounded-full font-bold">Explore Services</a>
+                                <a href="#services" class="btn-primary bg-white text-brown px-6 py-3 rounded-full font-bold">Explore Services</a>
                                 <a href="#blog" class="btn-primary bg-white text-brown px-6 py-3 rounded-full font-bold">Read the Blog</a>
                             </div>
                         </div>
